--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint *.js --fix"
+    "lint": "eslint *.js"
   },
   "peerDependencies": {
-    "eslint": "^7.17.0"
+    "eslint": "^7.17.0",
+    "prettier": "^2.3.0",
+    "typescript": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
     "prettier": "^2.3.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "vue": "^3.0.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.12.0",
