--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://www.linusb.org"
   },
   "repository": "https://github.com/linusborg/eslint-config.git",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Personal Eslint config presets",
   "license": "MIT",
   "publishConfig": {
@@ -35,8 +35,9 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-no-autofix": "^1.1.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-unused-imports": "^1.1.1",
-    "eslint-plugin-vue": "^7.3.0"
+    "eslint-plugin-vue": "^7.13.0"
   }
 }
