--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://www.linusb.org"
   },
   "repository": "https://github.com/linusborg/eslint-config.git",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Personal Eslint config presets",
   "license": "MIT",
   "publishConfig": {
@@ -21,23 +21,34 @@
     "lint": "eslint *.js"
   },
   "peerDependencies": {
-    "eslint": "^7.17.0",
+    "eslint": "^8.0.0",
     "prettier": "^2.3.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.3.0"
+  },
+  "peerDependenciesMeta": {
+    "eslint": {
+      "optional": true
+    },
+    "prettier": {
+      "optional": true
+    },
+    "typescript": {
+      "optional": true
+    }
   },
   "devDependencies": {
-    "eslint": "^7.17.0",
+    "eslint": "^8.*",
     "prettier": "^2.3.0",
     "typescript": "^4.0.0",
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-no-autofix": "^1.1.2",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unused-imports": "^1.1.1",
-    "eslint-plugin-vue": "^7.13.0"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
