--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://www.linusb.org"
   },
   "repository": "https://github.com/linusborg/eslint-config.git",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Personal Eslint config presets",
   "license": "MIT",
   "publishConfig": {
@@ -37,18 +37,18 @@
     }
   },
   "devDependencies": {
-    "eslint": "^8.*",
-    "prettier": "^2.3.0",
-    "typescript": "^4.0.0",
-    "vue": "^3.0.0"
+    "eslint": "^8.20.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
+    "vue": "^3.2.37"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "eslint-config-prettier": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-no-autofix": "^1.1.2",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^9.2.0"
   }
 }
