--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
     "url": "https://www.linusb.org"
   },
   "repository": "https://github.com/linusborg/eslint-config.git",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Personal Eslint config presets",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "main": "index.js",
+  "type": "commonjs",
+  "main": "index.cjs",
+  "module": "index.cjs",
   "files": [
-    "no-vue.js",
-    "base.js",
+    "index.cjs",
+    "base.cjs",
     "package.json"
   ],
   "scripts": {
@@ -22,8 +24,8 @@
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
-    "prettier": "^2.3.0",
-    "typescript": "^4.3.0"
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
   },
   "peerDependenciesMeta": {
     "eslint": {
@@ -37,18 +39,18 @@
     }
   },
   "devDependencies": {
-    "eslint": "^8.20.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
+    "eslint": "^8.53.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
     "vue": "^3.2.37"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-autofix": "^1.1.2",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^9.2.0"
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-vue": "^9.18.1"
   }
 }
