--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,26 @@
 {
-  "compilerOptions": {
-    "baseUrl": "./",
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    
-    // trying to get auto `import type` insertion for type imports
-    // doesn't work so far: https://github.com/microsoft/TypeScript/pull/36412#issuecomment-707221008
-    "isolatedModules": true,
-    "importsNotUsedAsValues": "error",
-    //
+	"compilerOptions": {
+		"baseUrl": "./",
+		"module": "esnext",
+		"lib": ["dom", "esnext"],
+		"importHelpers": true,
 
-    "declaration": true,
-    "sourceMap": true,   
-    "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "jsx": "preserve",
-    "esModuleInterop": true,
-  },
-  "include": ["tests/*.ts", "tests/*.vue"]
+		// trying to get auto `import type` insertion for type imports
+		// doesn't work so far: https://github.com/microsoft/TypeScript/pull/36412#issuecomment-707221008
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
+		//
+
+		"declaration": true,
+		"sourceMap": true,
+		"strict": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+		"moduleResolution": "node",
+		"jsx": "preserve",
+		"esModuleInterop": true
+	},
+	"include": ["tests/*.ts", "tests/*.vue", "index.mjs", "base.mjs"]
 }
